builder-usage/tests/fails/unamed_struct.rs
use builder_macro::Builder;

#[derive(Builder)]
struct ExampleStruct ();

fn main() {
    println!("Hello, world!");
}