builder-usage/tests/fails/unamed_struct.stderr
error: proc-macro derive panicked
 --> tests/fails/unamed_struct.rs:3:10
  |
3 | #[derive(Builder)]
  |          ^^^^^^^
  |
  = help: message: not implemented: only implemented for structs
